--- a/frontend/src/css/Profile.css
+++ b/frontend/src/css/Profile.css
@@ -1,23 +1,24 @@
+/* Profile Section Styles */
 .profile-container {
     width: 100vw;
-    height: 92vh;
+    height: 93vh;
     display: flex;
     flex-direction: column;
     padding: 20px;
     box-sizing: border-box;
-    background-color: #ffffff;
-    overflow-y: auto; 
+    background-color: #c3e0e5; /* Light background color */
+    overflow-y: auto;
 }
 
 .profile-heading {
     text-align: center;
-    color: #41729f;
+    color: #41729f; /* Heading color */
     margin-bottom: 20px;
 }
 
 .profile-layout {
     display: flex;
-    flex: 1;  
+    flex: 1;
     overflow: hidden;
 }
 
@@ -28,7 +29,6 @@
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin-right: 20px;
-    /* overflow-y: auto;  */
     max-height: 85vh;
 }
 
@@ -39,11 +39,11 @@
 }
 
 .profile-picture {
-    width: 120px;
-    height: 120px;
+    width: 160px;
+    height: 160px;
     border-radius: 50%;
     object-fit: cover;
-    border: 2px solid #ddd;
+    border: 2px solid #5885af; 
 }
 
 .employee-details p {
@@ -51,7 +51,7 @@
 }
 
 .delete-btn-profile {
-    background-color: red;
+    background-color: #dc3545; 
     color: white;
     border: none;
     padding: 10px;
@@ -62,7 +62,7 @@
 }
 
 .delete-btn-profile:hover {
-    background-color: #d11a1a;
+    background-color: #ff6c7b; 
 }
 
 .profile-update {
@@ -73,7 +73,6 @@
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    /* overflow-y: auto; Make this section scrollable */
     max-height: 88vh;
 }
 
@@ -85,7 +84,7 @@
 .input-group input {
     margin-bottom: 15px;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #5885af; /* Border color */
     border-radius: 5px;
     font-size: 14px;
 }
@@ -99,17 +98,17 @@
 }
 
 .update-btn {
-    background-color: #4CAF50;
+    background-color: #41729f; /* Update button color */
     color: white;
 }
 
 .upload-btn {
-    background-color: #1E90FF;
+    background-color: #1E90FF; /* Upload button color */
     color: white;
 }
 
 .password-btn {
-    background-color: #4CAF50;
+    background-color: #ebbf48; /* Password button color */
     color: white;
 }
 
@@ -122,6 +121,7 @@
     margin-top: 40px;
 }
 
+/* Media query for mobile responsiveness */
 @media (max-width: 768px) {
     .profile-layout {
         flex-direction: column;
