--- a/frontend/src/css/ViewHRs.css
+++ b/frontend/src/css/ViewHRs.css
@@ -25,7 +25,7 @@ button:hover {
     margin-bottom: 20px;
 }
 
-.search-bar {
+.search-bar-hr {
     display: flex;
     margin-bottom: 20px;
 }
@@ -33,10 +33,18 @@ button:hover {
 .search-bar input {
     padding: 10px;
     margin-right: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #41729f; 
     border-radius: 4px;
     flex: 1;
+    background-color: #f1f8fc; 
+    color: #41729f; 
 }
+
+.search-bar input:focus {
+    border: 1px solid #274472;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); 
+}
+
 
 .search-bar button {
     padding: 10px 15px;
@@ -57,7 +65,7 @@ button:hover {
 }
 
 .hr-table th, .hr-table td {
-    border: 1px solid #ddd;
+    border: 1px solid var(--border-color);
     padding: 8px;
     text-align: left;
 }
